fix: make ui-select dropdown z-index > modal dialog z-index in dashboard page
Otherwise the dropdown renders behind the modal dialog if filter value
is changed from the modal view of a widget.

--- a/client/app/components/dashboards/widget-dialog.less
+++ b/client/app/components/dashboards/widget-dialog.less
@@ -2,3 +2,7 @@
     font-weight: 500;
     font-size: 15px;
 }
+
+body.modal-open .dropdown.open {
+    z-index: 10000;
+}
